--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             alt="Workit Company light logo"
           />
           <nav>
-            <a href="#" class="nav-link">Apply for access</a>
+            <a href="/" class="nav-link">Apply for access</a>
           </nav>
         </div>
       </div>
     </header>
     <main>
-      <section class="hero bg-purple curved-bg">
+      <div class="hero bg-purple curved-bg">
         <div class="container">
           <img
             src="/assets/images/bg-pattern-1.svg"
@@ -46,7 +46,7 @@
               Data <span>tailored</span> to <br />
               your needs.
             </h1>
-            <a href="#" class="btn link-btn">Learn more</a>
+            <a href="/" class="btn link-btn">Learn more</a>
           </section>
           <img
             src="./assets/images/image-hero.webp"
@@ -54,7 +54,7 @@
             class="hero__img"
           />
         </div>
-      </section>
+      </div>
       <section class="offerings-section bg-off-white curved-bg">
         <div class="container">
           <ul class="offerings-list">
@@ -117,7 +117,7 @@
               company. Apply for access below and I’ll be in touch to schedule a
               call.
             </p>
-            <a href="#" class="btn link-btn">Apply for access</a>
+            <a href="/" class="btn link-btn">Apply for access</a>
             <img
               src="/assets/images/bg-pattern-3.svg"
               alt=""
