--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             alt="Workit Company light logo"
           />
           <nav>
-            <a href="/" class="nav-link">Apply for access</a>
+            <a href="/index.html" class="nav-link">Apply for access</a>
           </nav>
         </div>
       </div>
@@ -46,7 +46,7 @@
               Data <span>tailored</span> to <br />
               your needs.
             </h1>
-            <a href="/" class="btn link-btn">Learn more</a>
+            <a href="/index.html" class="btn link-btn">Learn more</a>
           </section>
           <img
             src="./assets/images/image-hero.webp"
@@ -117,7 +117,7 @@
               company. Apply for access below and I’ll be in touch to schedule a
               call.
             </p>
-            <a href="/" class="btn link-btn">Apply for access</a>
+            <a href="/index.html" class="btn link-btn">Apply for access</a>
             <img
               src="/assets/images/bg-pattern-3.svg"
               alt=""
